# frame

./: CHANGELOG.md  README.md  package.json
.github/workflows/: publish.yml  test-build.yml
scripts/: run.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: ffmpeg-aarch64-unknown-linux-gnu  ffmpeg-x86_64-apple-darwin  ffmpeg-x86_64-unknown-linux-gnu  ffprobe-aarch64-unknown-linux-gnu  ffprobe-x86_64-apple-darwin  ffprobe-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: conversion.rs  estimation.rs  lib.rs
src/lib/: types.ts
src/lib/components/: EmptySelection.svelte  EstimatedOutputPanel.svelte  FileItemRow.svelte  FileList.svelte  Header.svelte  SettingsPanel.svelte  Titlebar.svelte
src/lib/components/settings/: SettingsPanel.svelte
src/lib/components/settings/tabs/: AppTab.svelte  AudioTab.svelte  MetadataTab.svelte  OutputTab.svelte  PresetsTab.svelte  SourceTab.svelte  VideoTab.svelte
src/lib/components/titlebar/: LinuxTitlebar.svelte  MacosTitlebar.svelte  WindowsTitlebar.svelte
src/lib/i18n/locales/: de-DE.json  en-US.json  es-ES.json  fr-FR.json  it-IT.json  ja-JP.json  ko-KR.json  ru-RU.json  zh-CN.json
src/lib/services/: conversion.ts  media.ts  presets.ts
src/lib/utils/: bitrate.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
