[package]
name = "frame"
version = "0.3.1"
description = "A simple FFmpeg GUI"
edition = "2024"
authors = ["Marek Jóźwiak <hexthecoder@gmail.com>"]
license = "GPL-3.0-or-later"


[lib]
name = "frame_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-shell = "2.3.4"
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-store = "2.3.0"
window-vibrancy = "0.7.1"
tokio = "1.49.0"
tauri-plugin-prevent-default = "4.0.3"
thiserror = "2.0.18"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
